--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "pydub>=0.25.1",
     "requests>=2.31.0",
     "pytest>=7.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.34.0",
+    "pydantic[email]"
 ]
 
 [project.optional-dependencies]
