Update Dockerfile and dependencies for FastAPI project
- Added `pydantic-settings` to the Dockerfile and `pyproject.toml` for enhanced configuration management.
- Updated the Dockerfile to reflect the new application structure by changing the CMD path to `src.storytime.api.main:app`.
- Refactored settings import in `settings.py` to use `pydantic_settings` for improved settings handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "pytest>=7.0.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.34.0",
-    "pydantic[email]"
+    "pydantic[email]",
+    "pydantic-settings>=2.0.0"
 ]
 
 [project.optional-dependencies]
