--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.34.0",
     "pydantic[email]",
-    "pydantic-settings>=2.0.0"
+    "pydantic-settings>=2.0.0",
+    "elevenlabs>=0.2.27",
+    "python-multipart>=0.0.6",
+    "httpx>=0.27.0"
 ]
 
 [project.optional-dependencies]
