--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "elevenlabs>=0.2.27",
     "python-multipart>=0.0.6",
-    "httpx>=0.27.0"
+    "httpx>=0.27.0",
+    "numpy>=1.26.0"
 ]
 
 [project.optional-dependencies]
