Add Junjo dependency and implement smoke test workflow
- Added `junjo` as a new dependency in `pyproject.toml`.
- Created `junjo_smoketest.py` to define a simple workflow using Junjo, including a state, store, and a node that sets a message.
- Implemented an asynchronous main function to execute the workflow and print the final state.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "elevenlabs>=0.2.27",
     "python-multipart>=0.0.6",
     "httpx>=0.27.0",
-    "numpy>=1.26.0"
+    "numpy>=1.26.0",
+    "junjo>=0.1.0"
 ]
 
 [project.optional-dependencies]
