--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Audiobook parsing and TTS generation toolkit"
 authors = [{ name = "Storytime" }]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "pydantic>=2.0.0",
     "google-generativeai>=0.3.0",
@@ -21,11 +21,14 @@ dependencies = [
     "uvicorn[standard]>=0.34.0",
     "pydantic[email]",
     "pydantic-settings>=2.0.0",
-    "elevenlabs>=0.2.27",
+    "elevenlabs>=2.1.0",
     "python-multipart>=0.0.6",
     "httpx>=0.27.0",
     "numpy>=1.26.0",
-    "junjo>=0.1.0"
+    "junjo>=0.45.0",
+    "opentelemetry-sdk>=1.33.0",
+    "opentelemetry-exporter-otlp>=1.33.0",
+    "opentelemetry-exporter-otlp-proto-http>=1.33.0"
 ]
 
 [project.optional-dependencies]
@@ -42,4 +45,7 @@ development = [
 where = ["src"]
 
 [tool.isort]
-profile = "black" 
+profile = "black"
+
+[tool.poetry.dependencies]
+elevenlabs = ">=2.1.0" 
