Update Dockerfile and pyproject.toml to enhance dependencies and build environment
- Added `libpq-dev` and `gcc` to the Dockerfile for improved compatibility with PostgreSQL and C extensions.
- Included new dependencies in `pyproject.toml`: `celery[redis]`, `psycopg2-binary`, `asyncpg`, and `sqlalchemy` to support asynchronous database operations and task management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,11 @@ dependencies = [
     "junjo>=0.45.0",
     "opentelemetry-sdk>=1.33.0",
     "opentelemetry-exporter-otlp>=1.33.0",
-    "opentelemetry-exporter-otlp-proto-http>=1.33.0"
+    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
+    "celery[redis]",
+    "psycopg2-binary",
+    "asyncpg",
+    "sqlalchemy"
 ]
 
 [project.optional-dependencies]
