Implement Celery worker and add task testing script
- Updated `docker-compose.yml` to configure the Celery worker with the appropriate command and working directory.
- Introduced a new script `test_celery_task.py` to test the execution of the Celery task `generate_tts`, including logging for task registration and status.
- Created `celery_app.py` to initialize the Celery application with Redis as the broker and backend.
- Added `tasks.py` to define the `generate_tts` task, simulating a time-consuming operation.
- Added `__init__.py` to the worker module for proper package structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,14 @@ services:
       - redis
   worker:
     build: .
-    command: ["sleep", "infinity"] # Placeholder, will run Celery later
+    command:
+      [
+        "celery",
+        "-A",
+        "storytime.worker.celery_app:celery_app",
+        "worker",
+        "--loglevel=info",
+      ]
     environment:
       - ENV=dev
     env_file:
@@ -25,6 +32,7 @@ services:
     depends_on:
       - db
       - redis
+    working_dir: /app/src
   db:
     image: postgres:16
     restart: unless-stopped
