Add Alembic for database migrations and integrate DigitalOcean Spaces
- Introduced Alembic for managing database migrations, including a new alembic.ini configuration file and env.py for migration scripts.
- Updated .env.example to include configuration for DigitalOcean Spaces, including keys, region, bucket, and endpoint.
- Enhanced the TTS API to upload generated text files to DigitalOcean Spaces, with logging for upload success and error handling.
- Updated database model to include a new field for storing the text key associated with uploaded files.
- Modified settings.py to include a new environment variable for the Alembic database URL.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ dependencies = [
     "celery[redis]",
     "psycopg2-binary",
     "asyncpg",
-    "sqlalchemy"
+    "sqlalchemy",
+    "boto3>=1.34.0",
+    "greenlet (>=3.2.2,<4.0.0)"
 ]
 
 [project.optional-dependencies]
@@ -43,6 +45,7 @@ development = [
     "flake8",
     "mypy",
     "pre-commit",
+    "alembic>=1.13.0"
 ]
 
 [tool.setuptools.packages.find]
@@ -50,6 +53,6 @@ where = ["src"]
 
 [tool.isort]
 profile = "black"
+[tool.poetry.group.dev.dependencies]
+alembic = "^1.16.1"
 
-[tool.poetry.dependencies]
-elevenlabs = ">=2.1.0" 
