--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ ENV=dev
 OPENAI_API_KEY=
 ELEVEN_LABS_API_KEY=
 GOOGLE_API_KEY=
+ALEMBIC_DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/storytime
+# DigitalOcean Spaces
+DO_SPACES_KEY=your-access-key
+DO_SPACES_SECRET=your-secret-key
+DO_SPACES_REGION=nyc3
+DO_SPACES_BUCKET=storytime
+DO_SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
