--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ENV=dev
+      - ENV=docker
     env_file:
       - .env
     volumes:
@@ -13,6 +13,7 @@ services:
     depends_on:
       - db
       - redis
+    command: uvicorn src.storytime.api.main:app --host 0.0.0.0 --port 8000 --reload
   worker:
     build: .
     command:
@@ -24,7 +25,7 @@ services:
         "--loglevel=info",
       ]
     environment:
-      - ENV=dev
+      - ENV=docker
     env_file:
       - .env
     volumes:
