--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,9 @@ dependencies = [
     "asyncpg",
     "sqlalchemy",
     "boto3>=1.34.0",
-    "greenlet (>=3.2.2,<4.0.0)"
+    "greenlet (>=3.2.2,<4.0.0)",
+    "PyJWT[crypto]>=2.8.0",
+    "passlib[bcrypt]>=1.7.4"
 ]
 
 [project.optional-dependencies]
