Update .env.example and settings.py to enhance JWT authentication configuration
- Added a new JWT_SECRET_KEY entry in .env.example for better clarity on authentication setup.
- Modified the jwt_secret_key field in settings.py to require a value, ensuring it is set explicitly for production environments.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ OPENAI_API_KEY=
 ELEVEN_LABS_API_KEY=
 GOOGLE_API_KEY=
 ALEMBIC_DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/storytime
+
+# JWT Authentication (generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
+JWT_SECRET_KEY=your-secret-key-here
+
 # DigitalOcean Spaces
 DO_SPACES_KEY=your-access-key
 DO_SPACES_SECRET=your-secret-key
