--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,7 @@ dependencies = [
 [project.optional-dependencies]
 development = [
     "pytest",
-    "black",
-    "isort",
-    "flake8",
+    "ruff>=0.11.0",
     "mypy",
     "pre-commit",
     "alembic>=1.13.0"
@@ -53,8 +51,6 @@ development = [
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.isort]
-profile = "black"
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.16.1"
 pytest-asyncio = "^1.0.0"
