--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,9 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
+  },
   "lint-staged": {
     "*.{ts,tsx}": [
       "npm run typecheck",
