--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -27,8 +27,8 @@ env:
     ENV: production
     TTS_PROVIDER: openai
     TTS_MAX_CONCURRENCY: 8
+    DATABASE_URL: postgresql+asyncpg://postgres:$POSTGRES_PASSWORD@storytime-db:5432/storytime
   secret:
-    - DATABASE_URL
     - OPENAI_API_KEY
     - ELEVENLABS_API_KEY
     - DO_SPACES_KEY
@@ -45,7 +45,6 @@ accessories:
   db:
     image: postgres:16
     host: 129.212.136.218
-    port: 5432
     env:
       clear:
         POSTGRES_USER: postgres
@@ -83,4 +82,3 @@ proxy:
 # Builder configuration
 builder:
   arch: amd64
-
