--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -27,8 +27,8 @@ env:
     ENV: production
     TTS_PROVIDER: openai
     TTS_MAX_CONCURRENCY: 8
+    DATABASE_URL: postgresql+asyncpg://postgres:postgres@storytime-db:5432/storytime
   secret:
-    - DATABASE_URL
     - OPENAI_API_KEY
     - ELEVENLABS_API_KEY
     - DO_SPACES_KEY
