--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -32,6 +32,7 @@ env:
     TTS_PROVIDER: openai
     TTS_MAX_CONCURRENCY: 8
     DATABASE_URL: postgresql+asyncpg://postgres:postgres@storytime-db:5432/storytime
+    REDIS_URL: redis://storytime-redis:6379/0
   secret:
     - OPENAI_API_KEY
     - ELEVENLABS_API_KEY
@@ -40,7 +41,6 @@ env:
     - DO_SPACES_ENDPOINT
     - DO_SPACES_BUCKET
     - JWT_SECRET_KEY
-    - CELERY_BROKER_URL
     - KAMAL_REGISTRY_PASSWORD
     - KAMAL_REGISTRY_USERNAME
 
