--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     depends_on:
       - db
       - redis
-    command: uvicorn src.storytime.api.main:app --host 0.0.0.0 --port 8000 --reload
+    command: ["./scripts/start.sh", "--reload"]
   worker:
     build: .
     command:
