--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "greenlet (>=3.2.2,<4.0.0)",
     "PyJWT[crypto]>=2.8.0",
     "passlib[bcrypt]>=1.7.4",
+    "alembic>=1.13.0",
 ]
 
 [project.optional-dependencies]
@@ -40,7 +41,7 @@ development = [
     "ruff>=0.11.0",
     "mypy",
     "pre-commit",
-    "alembic>=1.13.0"
+    "alembic>=1.13.0",
 ]
 
 [tool.setuptools.packages.find]
