--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "psycopg2-binary",
     "asyncpg",
     "sqlalchemy",
-    "boto3>=1.34.0",
+    "aioboto3>=12.0.0",
     "greenlet (>=3.2.2,<4.0.0)",
     "PyJWT[crypto]>=2.8.0",
     "passlib[bcrypt]>=1.7.4",
