--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
     "scrapegraphai>=1.0.0",
     "playwright>=1.40.0",
     "fastmcp>=2.9.0",
+    "websockets>=12.0",
+    "sse-starlette>=1.6.0",
 ]
 
 [project.optional-dependencies]
