initial work to integrate pipecat

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ DO_SPACES_SECRET=your-secret-key
 DO_SPACES_REGION=nyc3
 DO_SPACES_BUCKET=storytime
 DO_SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
+
+# Voice Assistant Configuration
+USE_PIPECAT_BACKEND=true
+USE_ENHANCED_FEATURES=true
