--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     build: .
     ports:
       - "8000:8000"
+      - "8766:8766"  # Pipecat WebSocket server
     env_file:
       - .env.docker
     environment:
@@ -30,6 +31,9 @@ services:
       - db
       - redis
     command: ["uvicorn", "storytime.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=1
+      - net.ipv6.conf.default.disable_ipv6=1
   worker:
     build: .
     command:
