--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,18 +19,27 @@ services:
     build: .
     ports:
       - "8000:8000"
-      - "8765:8765"  # Pipecat WebSocket server
+      - "8765:8765" # Pipecat WebSocket server
     env_file:
       - .env.docker
     environment:
       - ENV=docker
     volumes:
       - .:/app
-      - /app/static  # Preserve the built static files from the image
+      - /app/static # Preserve the built static files from the image
     depends_on:
       - db
       - redis
-    command: ["uvicorn", "storytime.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command:
+      [
+        "uvicorn",
+        "storytime.api.main:app",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "8000",
+        "--reload",
+      ]
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
       - net.ipv6.conf.default.disable_ipv6=1
