--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,6 +23,8 @@ servers:
   web:
     hosts:
       - 129.212.136.218
+    options:
+      publish: "8765:8765"
   worker:
     hosts:
       - 129.212.136.218
