--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,7 @@ dependencies = [
     "PyJWT[crypto]>=2.8.0",
     "passlib[bcrypt]>=1.7.4",
     "alembic>=1.13.0",
-    "google-generativeai>=0.8.0,<0.9.0",
-    "scrapegraphai>=1.0.0",
+    "google-genai>=0.2.0",
     "playwright>=1.40.0",
     "fastmcp>=2.9.0",
     "websockets~=13.1",
